# lan_frame

./: Cargo.toml  README.md
backend/: README.md
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs  module.rs
backend/src/: lib.rs  module.rs
backend/src/app/: macros.rs
backend/src/db/: connect.rs  mod.rs  repository.rs
be/: Cargo.toml  README.md
be/examples/basic/: Cargo.toml
be/examples/basic/db/: compose.yaml
be/examples/basic/db_docker/: compose.yaml
be/examples/basic/migrations/: V1__create_user_table.sql  V2__seeding_user_table.sql  V3__create_book_table.sql  V4__seeding_book_table.sql
be/examples/basic/src/: main.rs
be/examples/basic/src/db/: book.rs  mod.rs  user.rs
be/examples/basic/src/db/table/: books.rs  mod.rs  users.rs
be/examples/basic/src/module/: mod.rs
be/examples/basic/src/module/user/: create_user_info.rs  mod.rs
be/macros/src/: db.rs  entity.rs  http.rs  lib.rs  module.rs
be/macros/src/db/: mod.rs  optional.rs  row.rs  table.rs
be/src/: lib.rs  module.rs
be/src/app/: macros.rs  mod.rs
be/src/db/: connect.rs  migration.rs  migrator.rs  mod.rs  repository.rs  table.rs
be/src/db/repository/: insert_query.rs  mod.rs  repository.rs
be/src/db/table/: mod.rs  row.rs
be/src/http/: mod.rs  rejection.rs  request.rs  response.rs
be/src/module/: handler.rs  mod.rs
examples/basic/: Cargo.toml
examples/basic/db_docker/: compose.yaml
examples/basic/src/db/: book.rs  mod.rs  user.rs
examples/basic/src/module/user/: get_user_info.rs  mod.rs
fe/: Cargo.toml
frontend/: Cargo.toml  README.md
frontend/src/: lib.rs
macros/: Cargo.toml
macros/src/: condition.rs  entity.rs  http.rs  lib.rs  module.rs
src/: app.rs  lib.rs  module.rs
src/app/: macros.rs  mod.rs
src/db/: connect.rs  migration.rs  mod.rs
src/db/entity/: mod.rs  select.rs
src/http/: mod.rs  rejection.rs
