[workspace]
members = [
    "be", 
    "be/macros",
    "be/examples/*"
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }

# be-db
sea-orm = { version = "1.1.0", features = ["sqlx-postgres","runtime-tokio-rustls"] }

# be-migrations
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
