[package]
name = "lan_be_frame"
version = "0.1.0"
edition = "2024"

[dependencies]
lan_be_frame_macros = { path = "macros" }
serde = { workspace = true}
tokio = { version = "1.45.1", features = ["full"] }
listenfd = "1.0.2"
axum = "0.8.4"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres","runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1.0", features = ["runtime-tokio-rustls"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }