[package]
name = "lan_be_frame"
version = "0.1.0"
edition = "2024"

[features]
default = []
full = ["db", "migrations"]
db = ["sea-orm","tokio-postgres"]
migrations = ["db","refinery"]

[dependencies]
lan_be_frame_macros = { path = "macros" }
serde = { workspace = true}
tokio = { version = "1.45.1", features = ["full"] }
listenfd = "1.0.2"
axum = "0.8.4"

# db
sea-orm = { workspace = true, optional = true }
tokio-postgres = { version = "0.7.12" , optional = true }

# migrations
refinery = { workspace = true, optional = true }